--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force"
+    "type-check": "vue-tsc --build --force",
+    "postbuild": "bash download_models.sh"
   },
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-webgpu": "^4.22.0",
     "@tensorflow/tfjs-core": "^4.22.0",
+    "jszip": "^3.10.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
@@ -25,5 +27,6 @@
     "typescript": "~5.4.0",
     "vite": "^5.1.6",
     "vue-tsc": "^2.0.6"
-  }
+  },
+  "author": "Yaroslav Kozak <https://github.com/yaroslavkozak>"
 }
