--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "prebuild": "bash download_models.sh",
     "dev": "vite --host",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "postbuild": "bash download_models.sh"
+    "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
